// Generated by tool. DO NOT EDIT!
// source: IN_Data.xlsx
// haogang.chen@nebuliumgames.com 

import "GameConfigAdvDifficulty.proto";
import "GameConfigAdvLevel.proto";
import "GameConfigAdventure.proto";
import "GameConfigBuff.proto";
import "GameConfigCareer.proto";
import "GameConfigChapter.proto";
import "GameConfigClasse.proto";
import "GameConfigConstant.proto";
import "GameConfigDishe.proto";
import "GameConfigDropRate.proto";
import "GameConfigEffct.proto";
import "GameConfigEquipPlan.proto";
import "GameConfigEquipPlanLevel.proto";
import "GameConfigEquipSet.proto";
import "GameConfigInit.proto";
import "GameConfigLoginReward.proto";
import "GameConfigMaterial.proto";
import "GameConfigMiniGame.proto";
import "GameConfigOdyssey.proto";
import "GameConfigPreLoad.proto";
import "GameConfigPvp.proto";
import "GameConfigPvpReward.proto";
import "GameConfigQuest.proto";
import "GameConfigQuestStar.proto";
import "GameConfigQuestType.proto";
import "GameConfigRace.proto";
import "GameConfigRegion.proto";
import "GameConfigRewardPool.proto";
import "GameConfigRoom.proto";
import "GameConfigRune.proto";
import "GameConfigScene.proto";
import "GameConfigScript.proto";
import "GameConfigSkill.proto";
import "GameConfigSkillPoint.proto";
import "GameConfigSkillsLevel.proto";
import "GameConfigSku.proto";
import "GameConfigSpineMappinig.proto";
import "GameConfigStar.proto";
import "GameConfigStore.proto";
import "GameConfigSummon.proto";
import "GameConfigTask.proto";
import "GameConfigTavernLevel.proto";
import "GameConfigThrowObject.proto";
import "GameConfigTutorial.proto";
import "GameConfigVipLevel.proto";

option java_package = "com.nb";
option java_outer_classname = "GameConfigAllMsg";
message GameConfigAll
{
    repeated GameConfigDishe dishes = 1;
    repeated GameConfigTavernLevel tavernLevels = 2;
    repeated GameConfigQuest quests = 3;
    repeated GameConfigOdyssey odysseys = 4;
    repeated GameConfigPvp pvps = 5;
    repeated GameConfigPvpReward pvpRewards = 6;
    repeated GameConfigTutorial tutorials = 7;
    repeated GameConfigScript scripts = 8;
    repeated GameConfigScene scenes = 9;
    repeated GameConfigChapter chapters = 10;
    repeated GameConfigRoom rooms = 11;
    repeated GameConfigSkill skills = 12;
    repeated GameConfigSkillsLevel skillsLevels = 13;
    repeated GameConfigMiniGame miniGames = 14;
    repeated GameConfigEffct effcts = 15;
    repeated GameConfigBuff buffs = 16;
    repeated GameConfigCareer careers = 17;
    repeated GameConfigThrowObject throwObjects = 18;
    repeated GameConfigAdventure adventures = 19;
    repeated GameConfigQuestStar questStars = 20;
    repeated GameConfigRegion regions = 21;
    repeated GameConfigRewardPool rewardPools = 22;
    repeated GameConfigAdvLevel advLevels = 23;
    repeated GameConfigSkillPoint skillPoints = 24;
    repeated GameConfigAdvDifficulty advDifficultys = 25;
    repeated GameConfigRace races = 26;
    repeated GameConfigClasse classes = 27;
    repeated GameConfigSpineMappinig spineMappinigs = 28;
    repeated GameConfigMaterial materials = 29;
    repeated GameConfigRune runes = 30;
    repeated GameConfigQuestType questTypes = 31;
    repeated GameConfigStar stars = 32;
    optional GameConfigConstant constants = 33;
    repeated GameConfigPreLoad preLoads = 34;
    repeated GameConfigSummon summons = 35;
    repeated GameConfigDropRate dropRates = 36;
    repeated GameConfigInit inits = 37;
    repeated GameConfigTask tasks = 38;
    repeated GameConfigEquipSet equipSets = 39;
    repeated GameConfigEquipPlan equipPlans = 40;
    repeated GameConfigEquipPlanLevel equipPlanLevels = 41;
    repeated GameConfigStore stores = 42;
    repeated GameConfigLoginReward loginRewards = 43;
    repeated GameConfigVipLevel vipLevels = 44;
    repeated GameConfigSku skus = 45;
}