// Generated by tool. DO NOT EDIT!
// source: IN_Data.xlsx
// haogang.chen@nebuliumgames.com 

import "GameConfigRequire.proto";
import "GameConfigReward.proto";

option java_package = "com.nb";
option java_outer_classname = "GameConfigMaterialMsg";
message GameConfigMaterial
{
    required int32 typeId = 1;
    required string name = 2;
    required string type = 3;
    required string asset = 4;
    required int32 grade = 5;
    required string weaponAdjType = 6;
    required double weaponAdjAmount = 7;
    required string armorAdjType = 8;
    required double armorAdjAmount = 9;
    repeated GameConfigRequire requires = 10;
    required int32 gemPrice = 11;
    required int32 mustDropRounds = 12;
    repeated GameConfigReward rewards = 13;
}