// Generated by tool. DO NOT EDIT!
// source: IN_Data.xlsx
// haogang.chen@nebuliumgames.com 

import "GameConfigRequire.proto";

option java_package = "com.nb";
option java_outer_classname = "GameConfigExchangeMsg";
message GameConfigExchange
{
    required int32 typeId = 1;
    required int32 advId = 2;
    required int32 vipLevel = 3;
    required int32 tavernLevel = 4;
    repeated GameConfigRequire requires = 5;
}