// Generated by tool. DO NOT EDIT!
// source: IN_Data.xlsx
// haogang.chen@nebuliumgames.com 

import "GameConfigGuildContribute.proto";
import "GameConfigGuildLevel.proto";

option java_package = "com.nb";
option java_outer_classname = "GameConfigGuildMsg";
message GameConfigGuild
{
    repeated GameConfigGuildLevel guildLevels = 1;
    repeated GameConfigGuildContribute guildContributes = 2;
    required int32 max_vice_count = 3;
    required int32 max_member_count = 4;
    required int32 max_president_count = 5;
    required int32 max_slogan_length = 6;
    required int32 max_guild_points = 7;
    required int32 max_guild_coins = 8;
    required int32 max_president_offline_time = 9;
    required int32 max_guild_name_length = 10;
    required int32 daily_apply_count_per_guild = 11;
    required int32 apply_keep_time = 12;
    required int32 max_apply_count = 13;
    required int32 max_log_count = 14;
    required int32 max_collect_reward_count_daily = 15;
    required int32 contribute_persist_time = 16;
    required int32 max_daily_guild_points = 17;
    required int32 max_daily_guild_battle_count = 18;
    required int32 guild_quilt_cooldown = 19;
    required int32 guild_create_gem_cost = 20;
    required int32 guild_create_min_level = 21;
    required int32 guild_icon_range = 22;
    required int32 guild_boss_default_hp = 23;
    required int32 guild_quest_start_typeid = 24;
    required int32 guild_quest_count = 25;
    required string guild_default_slogan = 26;
    required int32 guild_battle_time = 27;
    required int32 guild_battle_finish_delay_time = 28;
    required int32 guild_quest_reward_cooldown = 29;
}