// Generated by tool. DO NOT EDIT!
// source: IN_Data.xlsx
// haogang.chen@nebuliumgames.com 


option java_package = "com.nb";
option java_outer_classname = "GameConfigSkuMsg";
message GameConfigSku
{
    required int32 typeId = 1;
    required string skuId = 2;
    required int32 gemCount = 3;
    required int32 rewardGemCount = 4;
    required string price = 5;
    required string buyType = 6;
}