// Generated by tool. DO NOT EDIT!
// source: IN_Data.xlsx
// haogang.chen@nebuliumgames.com 

import "GameConfigReward.proto";

option java_package = "com.nb";
option java_outer_classname = "GameConfigVipLevelMsg";
message GameConfigVipLevel
{
    required int32 typeId = 1;
    required int32 maxGem = 2;
    required int32 buyEnergyCount = 3;
    required int32 normalStoreRefreshCount = 4;
    required int32 resetOdysseyCount = 5;
    required int32 sweepTicketCount = 6;
    required bool autoEquipFragComplete = 7;
    required bool sweep10 = 8;
    required bool blackStore = 9;
    required int32 pvpRefreshCount = 10;
    required int32 coinStoreRefreshCount = 11;
    required int32 resetBossCount = 12;
    required bool showLegendSummon = 13;
    required bool unlockLegendSummon = 14;
    required int32 exchangeAdv = 15;
    required int32 exploreCount = 16;
    required int32 odysseyDoubleInput = 17;
    required int32 dungeonResetCount = 18;
    repeated GameConfigReward rewards = 19;
}